@@ -13,6 +13,9 @@
    - dtucker@cvs.openbsd.org 2003/10/07 01:52:13
      [regress/Makefile regress/banner.sh]
      Test SSH2 banner.  ok markus@
+   - djm@cvs.openbsd.org 2003/10/07 07:04:52
+     [regress/sftp-cmds.sh]
+     more sftp quoting regress tests; ok markus
 
 20031007
  - (djm) Delete autom4te.cache after autoreconf
@@ -1308,4 +1311,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3067 2003/10/08 07:47:19 dtucker Exp $
+$Id: ChangeLog,v 1.3068 2003/10/08 07:52:10 dtucker Exp $
